# llm-chat-cpp

./: CMakeLists.txt  README.md  vcpkg.json
include/: chat_app.h  http_client.h  llm_client.h  mcp_client.h  readline_compat.h  utils.h
src/: chat_app.cpp  http_client.cpp  llm_client.cpp  main.cpp  mcp_client.cpp  readline_compat.cpp  utils.cpp
